--- a/src/index.css
+++ b/src/index.css
@@ -172,4 +172,18 @@ body {
       cursor: not-allowed;
     }
   }
+
+  & .dialog {
+    position: absolute;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 32px;
+    border-radius: 24px;
+    box-shadow: 0 0 16px #000;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
